@@ -4,7 +4,7 @@ six==1.9.0
 colorama==0.3.2
 requests==2.5.1
 certifi==14.05.14
-CacheControl==0.10.7
+CacheControl==0.11.1
 lockfile==0.10.2
 progress==1.2
 ipaddress==1.0.7  # Only needed on 2.6, 2.7, and 3.2
